--- a/Programacion/KL_APP/src/Vista/vPartidos.form
+++ b/Programacion/KL_APP/src/Vista/vPartidos.form
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Vista.vPrincipal">
-  <grid id="27dc6" binding="pPrincipal" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Vista.vPartidos">
+  <grid id="27dc6" binding="pPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1000" height="400"/>
+      <xy x="20" y="20" width="1876" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="513d1" binding="pMenu" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="5c7bc" binding="pMenu" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <minimum-size width="300" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <alignmentX value="0.0"/>
         </properties>
         <border type="none"/>
         <children>
-          <grid id="6e716" class="javax.swing.JMenuBar" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="4d748" class="javax.swing.JMenuBar" layout-manager="GridLayoutManager" row-count="1" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="300" height="-1"/>
+              </grid>
             </constraints>
             <properties>
               <background color="-16777216"/>
             </properties>
             <border type="none"/>
             <children>
-              <grid id="d37d6" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="456cb" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -41,7 +45,7 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <grid id="90223" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="46fb1" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -58,7 +62,7 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <grid id="e4869" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="2d10a" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -74,7 +78,7 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <grid id="19c93" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="bda22" class="javax.swing.JMenu" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -90,7 +94,7 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <component id="36b92" class="javax.swing.JLabel">
+              <component id="f084d" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <minimum-size width="350" height="-1"/>
@@ -102,7 +106,7 @@
                   <text value=""/>
                 </properties>
               </component>
-              <grid id="81014" class="javax.swing.JMenu" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+              <grid id="39cfb" class="javax.swing.JMenu" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                 <constraints>
                   <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -112,14 +116,14 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="cb4c" class="javax.swing.JLabel">
+                  <component id="cce77" class="javax.swing.JLabel">
                     <constraints/>
                     <properties>
                       <alignmentX value="0.6"/>
                       <text value="‎ "/>
                     </properties>
                   </component>
-                  <component id="46697" class="javax.swing.JLabel">
+                  <component id="d039b" class="javax.swing.JLabel">
                     <constraints/>
                     <properties>
                       <alignmentX value="0.5"/>
@@ -128,7 +132,7 @@
                       <toolTipText value=""/>
                     </properties>
                   </component>
-                  <component id="a6e02" class="javax.swing.JLabel">
+                  <component id="2e145" class="javax.swing.JLabel">
                     <constraints/>
                     <properties>
                       <alignmentX value="0.5"/>
@@ -138,28 +142,28 @@
                       <text value="Administrador"/>
                     </properties>
                   </component>
-                  <component id="5da5e" class="javax.swing.JLabel">
+                  <component id="434bd" class="javax.swing.JLabel">
                     <constraints/>
                     <properties>
                       <alignmentX value="0.0"/>
                       <text value="‎ "/>
                     </properties>
                   </component>
-                  <component id="c54ff" class="javax.swing.JMenuItem">
+                  <component id="b28c5" class="javax.swing.JMenuItem">
                     <constraints/>
                     <properties>
                       <icon value="assets/user-svgrepo-com (1).png"/>
                       <text value="Perfil"/>
                     </properties>
                   </component>
-                  <component id="94cbd" class="javax.swing.JMenuItem">
+                  <component id="ba2d1" class="javax.swing.JMenuItem">
                     <constraints/>
                     <properties>
                       <icon value="assets/login-svgrepo-com (1).png"/>
                       <text value="Cerrar Sesión"/>
                     </properties>
                   </component>
-                  <component id="1ead6" class="javax.swing.JLabel">
+                  <component id="a0395" class="javax.swing.JLabel">
                     <constraints/>
                     <properties>
                       <text value="‎ "/>
@@ -167,7 +171,7 @@
                   </component>
                 </children>
               </grid>
-              <component id="8678b" class="javax.swing.JLabel" binding="lNombre">
+              <component id="f5c1a" class="javax.swing.JLabel" binding="lNombre">
                 <constraints>
                   <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -178,54 +182,85 @@
               </component>
             </children>
           </grid>
-          <vspacer id="25187">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
         </children>
       </grid>
-      <grid id="7ee90" binding="pDatos" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="40" bottom="0" right="40"/>
+      <grid id="907fa" binding="pHeader" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="5dfa4" class="javax.swing.JLabel">
+          <grid id="1a6fb" binding="pContenedor" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="20" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="90"/>
+                <preferred-size width="-1" height="90"/>
+                <maximum-size width="-1" height="90"/>
+              </grid>
             </constraints>
             <properties>
-              <font size="16" style="1"/>
-              <text value="ÚLTIMA JORNADA -"/>
+              <background color="-1488097"/>
             </properties>
-          </component>
-          <hspacer id="6aad3">
+            <border type="none"/>
+            <children>
+              <grid id="8ea57" binding="pCombo" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="20" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <opaque value="false"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="a83de" class="javax.swing.JComboBox" binding="cbJornadas">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                        <minimum-size width="-1" height="30"/>
+                        <preferred-size width="-1" height="30"/>
+                        <maximum-size width="-1" height="30"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <model>
+                        <item value="Jornada 1"/>
+                        <item value="Jornada 2"/>
+                        <item value="Jornada 10"/>
+                      </model>
+                    </properties>
+                  </component>
+                  <vspacer id="28e5c">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
+                  <component id="7451b" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font size="14" style="1"/>
+                      <foreground color="-1"/>
+                      <text value="PARTIDOS"/>
+                    </properties>
+                  </component>
+                </children>
+              </grid>
+            </children>
+          </grid>
+          <grid id="7bf03" binding="pPartidos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-          </hspacer>
-          <component id="53795" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <font size="16" style="1"/>
-              <text value="insertar fecha"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children/>
+          </grid>
         </children>
-      </grid>
-      <grid id="9827a" binding="pPartidos" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
       </grid>
     </children>
   </grid>
